# training-free

./: .env.example  .gitignore  README.md  pyproject.toml  run_phase1_four_subset_e2e.sh
configs/: bfcl_eval_protocol.yaml  bfcl_v4_openrouter.env  bfcl_v4_phase1.env  compiler.yaml  patch_metrics.json  runtime.yaml  runtime_bfcl_skills.yaml  runtime_bfcl_structured.yaml  selector.yaml
docs/: algorithm_report_v1.md  bfcl_performance_roadmap.md  experiment_protocol_bfcl_v4.md  explicit_literal_candidate_expansion_spec.md  failure_taxonomy.md  first_stage_acceptance_matrix.md  golden_rule_onepager.md  m28pre_delivery_summary.md  memory_first_pass_dev_smoke_readiness.md  memory_operation_dev_scorer_application.md  phase2_design.md  phase2_evolution_plan.md  phase2_next_action_compiler_plan.md  phase2_next_stage_implementation_plan.md  phase2_protocol_to_archive_example.md  phase2_run_summary_2026-04-23.md  progress_2026-04-21.md  repair_distribution_notes_2026-04-23.md  required_next_tool_choice_validation_2026-04-23.md  setup_conda_openrouter.md  stage1_acceptance_state_machine.md  stage1_bfcl_execution_runbook.md  stage1_bfcl_negative_evidence_report.md  stage1_bfcl_performance_sprint.md  stage1_bfcl_scope_change_decision_memo.md  stage1_huawei_acceptance_approval_template.md  stage1_provider_access_request.md  stage1_rashe_approval_packet_review_matrix.md  stage1_rashe_external_handoff_note.md  stage1_rashe_handoff_summary.md  stage1_rashe_main_merge_readiness.md  stage1_rashe_offline_evolution_loop.md  stage1_rashe_runtime_implementation_plan.md  (+8 more)
outputs/: README.md
(+46015 files in other folders)
